# Lecture-of-Fundamentals-of-Computer-Vision

./: .gitignore  README.md  assignment.md  generate_results.py  main.py  references.md  requirements.txt  test_pipelines.py  test_server.py
.ipynb_checkpoints/: README-checkpoint.md  demo-checkpoint.py  references-checkpoint.md
2026/: README.md
2026/project_01_wangzhe/: FILELIST.md  README.md  references.md
2026/project_02_tangzhichao/: .gitignore  README.md  requirements.txt
2026/project_03_wangjian/: README.md  references.md  report.md  setup_windows_core.ps1  setup_windows_torch_sam2.ps1
2026/project_05_zhangjiancheng/: main.py  references.md
2026/project_07_zhangyizhou/: DEMO_REPORT.md  README.md
2026/project_08_haojiaheng/: .gitattributes  .gitignore  README.md  README_ZH.md
2026/project_09_xudehao/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
2026/project_09_xudehao/.github/workflows/: ci.yml
2026/project_09_xudehao/scripts/: detect_video.py  run_benchmark.py  visualize_benchmark.py
2026/project_09_xudehao/src/yolov8_realtime/: __init__.py  benchmark.py  config.py  detector.py  metrics.py  video.py  visualization.py
2026/project_09_xudehao/tests/: test_benchmark.py  test_metrics.py  test_visualization.py
cv_preprocess/: anime_preprocess.py  basic_preprocess.py  coloring_preprocess.py  depth_preprocess.py  prepairold_preprocess.py  scribble_process.py  test.py
demos/: demo.ipynb
pipeline/: preprocessors.py
project_01_wangzhe/: README.md
src/: test_pipelines.py
ui/: app.py
(+420 files in other folders)
