[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yolov8-realtime-detection"
version = "0.1.0"
description = "Real-time video object detection project based on YOLOv8, with benchmarks and visualization."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "CVPROJ" }]
dependencies = []

[project.optional-dependencies]
runtime = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=7.0.0",
]
all = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

